# parsenv

./: .env  .gitignore  README.md  pyproject.toml
env/: __init__.py  core.py  main.py  parsers.py
tests/: __main__.py
