[project]
name = "parsenv"
version = "0.1.3"
description = ""
authors = [{ name = "levch", email = "levchenko.d.a1998@gmail.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts._]
env_file = ".env"
env = { PYTHONPATH = "." }

[tool.pdm.scripts]
test = "python tests"
